# SnowMind

./: .env.example  .firepan.yml  .gitignore  .tmp_requested_diff.txt  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  GLSL.md  README.md  SECURITY.md  _check_onchain.py  audit_report.md  backend_error.md  backend_logs1.md  condensed_errors.txt  console_error.md  execution_logs1.md  executionservice_logs.md  folksfinance.md  image.avif  kernel-smart-account-architecture.md  package.json  pnpm-lock.yaml  report (3).md  report.md  riskscoreplan.md  snow-mind-technical-spec.txt  snowmind-risk-scoring.md  tech_stack.md  test_hard_fork.py  test_output.txt  tmp_usdc_trace.py  triage_results.txt  turbo.json  tvl-cap-liquidity.md  vercel.json  zany-moseying-penguin (2).md  zany-moseying-penguin.md
apps/backend/: .coverage  .dockerignore  .env.example  Dockerfile  _debug_whale.py  check_all_balances.py  check_balances.py  check_balances2.py  main.py  pyproject.toml  railway.toml  supabase_schema.sql  test_summary.txt
apps/backend/app/core/: config.py  database.py  limiter.py  logging.py  observability.py  request_metrics.py  rpc.py  security.py  validators.py
apps/backend/app/models/: account.py  allocation.py  base.py  protocol.py  rebalance_log.py
apps/backend/app/scripts/: backfill_account_principal_tracking.py  backfill_rebalance_log_metadata.py  rewrap_session_keys_to_kms.py
apps/backend/app/services/: fee_calculator.py  monitoring.py
apps/backend/execution_service/: .env.example  auth.js  auth.test.js  execute.js  package-lock.json  package.json  server.js
(+298 files in other folders)
